syntax = "proto3";

package neobank;
option go_package = "/api";

message User {
  int32 id = 1;
  string username = 2;
}


message Account {
  int32 id = 1;
  int32 userId = 2;
  int32 balance = 3;
}

// Read account structures
message GetAccountRequest {
  int32 accountId = 1;
}

message AccountResponse {
  Account account =1;
}

// Deposit/Withdraw structures
message OperationRequest {
  int32 accountId = 1;
  int32 amount = 2;
}

service AccountService {
  rpc Get (GetAccountRequest) returns (AccountResponse);
  rpc Deposit (OperationRequest) returns (AccountResponse);
  rpc Withdraw (OperationRequest) returns (AccountResponse);
}
